0.5 -> 0.6
 2018-01-18

 Balance:
 - Also ignore AK's and similar units and cheap T2 units as spam stopper.
 - Make the spawn of AA units optional - "mo_aa_units".

0.4 -> 0.5
 2018-01-14

 Balance:
 - Try to stop the KING from rushing into eco.
 - Increase the KING's collision size so its not able to rush through defs.
 - Slow down the KING's movement speed.
 - Ignore Fleas by setting them to neutral - no more spam stopper.

 Improvements:
 - Try spawn the king at a random burrow before using random position.
 - Fix count of robots on map, use percentage for spawnChance.
 - Improve new waves settings.
 - Update TA to 3.06.

0.3 -> 0.4
 2018-01-14

 Bug Fix Release:
 - Fix mistake in new waves settings.

0.2.0 -> 0.3
 2018-01-14

 Improvements:
 - Increase tech level from "mo_custom_cost_multiplier" > 1.4.

 Bug Fix Release:
 - Add taken units to the new team.

0.2.0 -> 0.2.3
 2018-01-12

 Bug Fix Release:
 - Improve new wave settings add max tech level to wave settings.

0.2.0 -> 0.2.2
 2018-01-12

 Bug Fix Release:
 - Fix Robots not working at all.

0.2.0 -> 0.2.1
 2018-01-12

 Improvements:
 - Increase default mo_graceperiod to 280->600.
 - Rename mo_maxchicken -> mo_custom_maxchicken and scale it per player.
 - Get the real count of human Teams (no dead or taken teams) for minRobots/maxRobots.

0.1.6 -> 0.2.0
 2018-01-11

 Bug Fix Release:
 - Fix the changelog format for the ingame viewer.
 - Fix not moving units and debug output when a team has been taken.

 Improvements:
 - New waves logic, robot should spawn now more dynamicaly.

 - Replace mo_custom_chickenspawn with mo_custom_numwaves
   Now you can define how many waves you wanna see until KING comes.

0.1.5 -> 0.1.6
 2018-01-03

 Bugs Fix Release:
 - Fix exceptions when a team dies.

0.1.4 -> 0.1.5
 2018-01-01

 Bugs Fix Release:
 - Fix Game over with multiple KING's (all need to die).
 - Fixes a bug where the KING doesn't fight anymore.

0.1.3 -> 0.1.4
 2018-01-01

 Bugs Fix Release: